<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- GENERAL INFORMATION -->
    <groupId>es.bsc.compss</groupId>
    <artifactId>compss-trunk</artifactId>
    <version>2.4.rc1811</version>
    <packaging>pom</packaging>

    <!-- PROJECT INFORMATION -->
    <name>COMP Superscalar Trunk</name>
    <description>COMPSs Trunk - Framework + Tests</description>
    <url>http://compss.bsc.es</url>
    <inceptionYear>2014</inceptionYear>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>
    <organization>
        <name>BSC</name>
        <url>http://www.bsc.es</url>
    </organization>

    <!-- PROPERTIES -->
    <properties>
        <compss.version>2.4.rc1811</compss.version>
        <junit.version>4.12</junit.version>
        <junit.rules.version>1.16.1</junit.rules.version>

        <!-- Maven Plugins -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
        <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
        <maven-resources-plugin.version>3.0.1</maven-resources-plugin.version>
        <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
        <maven-war-plugin.version>3.0.0</maven-war-plugin.version>
        <tomcat7-maven-plugin.version>2.1</tomcat7-maven-plugin.version>
        <maven-jaxb2-plugin.version>0.12.1</maven-jaxb2-plugin.version>
        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
        <!-- Project encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!-- SOURCE CONTROL MANAGEMENT -->
    <scm>
        <connection>scm:git:http://compss.bsc.es/gitlab/compss/framework.git</connection>
        <developerConnection>scm:git:http://compss.bsc.es/gitlab/compss/framework.git</developerConnection>
        <url>http://compss.bsc.es/gitlab/compss/framework.git</url>
    </scm>

    <!-- REPOSITORIES -->
    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>Central Repository</name>
            <url>http://central.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>compss-repo</id>
            <name>BSC Workflows and Distributed Computing group</name>
            <url>http://compss.bsc.es/artifactory/libs-release</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>Central Repository</name>
            <url>http://central.maven.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>

    <!-- DISTRIBUTION MANAGEMENT -->
    <distributionManagement>
        <repository>
            <id>compss-repo</id>
            <name>BSC Workflows and Distributed Computing group</name>
            <url>http://compss.bsc.es/artifactory/libs-release</url>
        </repository>
    </distributionManagement>

    <!-- SUB-MODULES -->
    <modules>
        <module>compss</module>
        <module>tests/sources</module>
        <module>performance_analysis/auto-cbm</module>
        <module>maven-plugins/instrumentation</module>
    </modules>
</project>
